Updated Tika to the latest stable version 3.3.1 and fix for the admin UI